fix(extension): fix overflow on x-axis scroll in the smallest screens

--- a/apps/browser-extension-wallet/src/views/browser-view/components/Layout/SectionLayout.modules.scss
+++ b/apps/browser-extension-wallet/src/views/browser-view/components/Layout/SectionLayout.modules.scss
@@ -21,7 +21,7 @@ $aside-width-large: 420px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
+  padding-left: size_unit(1);
   @media (min-width: $breakpoint-small) {
     margin-top: 120px;
   }
